# Plasmid-host-range

./: .gitignore  README.md  pyproject.toml
configs/: colab.yaml  colab_v2.yaml  default.yaml  smoke.yaml
notebooks/: ani_validation.ipynb  train_colab.ipynb
src/plasmid_host_range/: __init__.py  baselines.py  cli.py  evaluate.py  model.py  predict.py  train.py
src/plasmid_host_range/data/: ani_cluster.py  dataset.py  download.py  preprocess.py  splits.py
tests/: test_predict_smoke.py  test_preprocess.py
